# airtable-api

./: README.md  app.py  compressor.py  mohamad-ali-nasser-Mercor Assessment Documentation.md  pyproject.toml  render.yaml  run_server.bat  run_server.sh  run_tests.bat  run_tests.sh  test_app.py
dictionaries/: constants.py
services/: compressor.py  decompression.py  llm_evaluator.py  shortlist.py
tests/: test_app.py  test_llm_evaluator.py
